--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@ body{
   margin-left: auto;
   margin-right: auto; 
   text-align: center;
-
+  box-shadow: 0px 0px 8px #888888;
 
   
 }
@@ -121,7 +121,8 @@ img {
       <a href="#"> Good To Know </a>
     </div>
     </div>  
-    <button class="button" onclick="window.location.href= 'aquatics.html'">AQUATICS   </button> 
+    <button class="button" onclick="window.location.href= 'aquatics.html'">AQUATICS   </button>
+    <button class="button" onclick="window.location.href= 'realestate.html'">REAL ESTATE   </button> 
      <button class="button" onclick="window.location.href= 'bio.html'">BIO/RESUME   </button>
     <button class="button" onclick="window.location.href= 'contact.html'">    CONTACT  </button>
     </div> 
