--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@ img {
   height: 80%;
   position: absolute;
   left: 5%;
+  box-shadow: 0px 0px 8px #888888;
   
 }
 
@@ -67,6 +68,7 @@ img {
   right: 5%;
   text-align: center;
   font-size: 13px;
+  box-shadow: 0px 0px 8px #888888;
 }
 
 .searchline {
@@ -88,7 +90,7 @@ img {
   margin-left: auto;
   margin-right: auto; 
   text-align: center;
- 
+  box-shadow: 0px 0px 8px #888888;
 
   
 }
@@ -201,6 +203,7 @@ h3{
     </div>
     </div>
     <button class="button" onclick="window.location.href= 'aquatics.html'">AQUATICS   </button>
+    <button class="button" onclick="window.location.href= 'realestate.html'">REAL ESTATE   </button>
     <button class="button" onclick="window.location.href= 'bio.html'">BIO/RESUME   </button>
     <button class="button" onclick="window.location.href= 'contact.html'">    CONTACT  </button>
 
